force-app/main/default/objects/Due_Diligence__c/fields/Maintenance_or_break_fix_support_Score__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_or_break_fix_support_Score__c</fullName>
    <formula>CASE(TEXT(  Maintenance_or_break_fix_support_Rating__c ),
&apos;Exceed Expectations&apos;,  Maintenance_or_break_fix_support_Weight__c *1,
 &apos;Meet Expectations&apos;,Maintenance_or_break_fix_support_Weight__c *0.85,
&apos;Average&apos;,Maintenance_or_break_fix_support_Weight__c *0.6,
&apos;High Risk&apos;,Maintenance_or_break_fix_support_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance or break fix support Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>