force-app/main/default/objects/Due_Diligence__c/fields/Maintenance_or_break_fix_support_Weight__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_or_break_fix_support_Weight__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Maintenance or break fix support Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>