force-app/main/default/objects/Due_Diligence__c/fields/NBD_Resolution_or_Others_Score__c.field-meta.xml
<CustomField>
    <fullName>NBD_Resolution_or_Others_Score__c</fullName>
    <formula>CASE(TEXT(  NBD_Resolution_or_Others_Rating__c ),
&apos;Exceed Expectations&apos;,  NBD_Resolution_or_Others_Weight__c *1,
 &apos;Meet Expectations&apos;,NBD_Resolution_or_Others_Weight__c *0.85,
&apos;Average&apos;,NBD_Resolution_or_Others_Weight__c *0.6,
&apos;High Risk&apos;,NBD_Resolution_or_Others_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBD Resolution or Others Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>