force-app/main/default/objects/Due_Diligence__c/fields/NBD_Resolution_or_Others_Weight__c.field-meta.xml
<CustomField>
    <fullName>NBD_Resolution_or_Others_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.NBD_Resolution_or_Others_Weight__c</defaultValue>
    <label>NBD Resolution or Others Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>