force-app/main/default/objects/Due_Diligence__c/fields/Net_Margin_Growth_for_last_3_year_Rating__c.field-meta.xml
<CustomField>
    <fullName>Net_Margin_Growth_for_last_3_year_Rating__c</fullName>
    <label>Net Margin Growth for last 3 year Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Exceed Expectations</fullName>
            </value>
            <value>
                <fullName>Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Not Ready for Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>