force-app/main/default/objects/Due_Diligence__c/fields/Net_Margin_Growth_for_last_3_year_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Margin_Growth_for_last_3_year_Score__c</fullName>
    <formula>CASE(TEXT(  Net_Margin_Growth_for_last_3_year_Rating__c ),
&apos;Exceed Expectations&apos;,  Net_Margin_Growth_for_last_3_year_Weigh__c *1,
 &apos;Meet Expectations&apos;,Net_Margin_Growth_for_last_3_year_Weigh__c *0.85,
&apos;Average&apos;,Net_Margin_Growth_for_last_3_year_Weigh__c *0.6,
&apos;High Risk&apos;,Net_Margin_Growth_for_last_3_year_Weigh__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Margin Growth for last 3 year Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>