force-app/main/default/objects/Due_Diligence__c/fields/Net_Margin_Growth_for_last_3_year_Weigh__c.field-meta.xml
<CustomField>
    <fullName>Net_Margin_Growth_for_last_3_year_Weigh__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Net_Margin_Growth_for_last_3year_Weight__c</defaultValue>
    <label>Net Margin Growth for last 3year Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>