force-app/main/default/objects/Due_Diligence__c/fields/No_of_Countries_covered_direct_Weight__c.field-meta.xml
<CustomField>
    <fullName>No_of_Countries_covered_direct_Weight__c</fullName>
    <defaultValue>5</defaultValue>
    <label>No. of Countries covered direct Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>