force-app/main/default/objects/Due_Diligence__c/fields/No_of_Field_Engineers_Score__c.field-meta.xml
<CustomField>
    <fullName>No_of_Field_Engineers_Score__c</fullName>
    <formula>CASE(TEXT(  No_of_Field_Engineers_Rating__c  ),
&apos;Exceed Expectations&apos;,  No_of_Field_Engineers_Weight__c *1,
 &apos;Meet Expectations&apos;,No_of_Field_Engineers_Weight__c *0.85,
&apos;Average&apos;,No_of_Field_Engineers_Weight__c *0.6,
&apos;High Risk&apos;,No_of_Field_Engineers_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Field Engineers Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>