force-app/main/default/objects/Due_Diligence__c/fields/No_of_Field_Engineers_Weight__c.field-meta.xml
<CustomField>
    <fullName>No_of_Field_Engineers_Weight__c</fullName>
    <defaultValue>3</defaultValue>
    <label>No of Field Engineers Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>