force-app/main/default/objects/Due_Diligence__c/fields/No_of_High_value_customers_Rating__c.field-meta.xml
<CustomField>
    <fullName>No_of_High_value_customers_Rating__c</fullName>
    <inlineHelpText>No. of High value customers Rating (&gt; $ 5m)</inlineHelpText>
    <label>No. of High value customers Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceed Expectations</fullName>
            </value>
            <value>
                <fullName>Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Not Ready for Partnership</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>