force-app/main/default/objects/Due_Diligence__c/fields/No_of_High_value_customers_Score__c.field-meta.xml
<CustomField>
    <fullName>No_of_High_value_customers_Score__c</fullName>
    <formula>CASE(TEXT(    No_of_High_value_customers_Rating__c ),
&apos;Exceed Expectations&apos;,  No_of_High_value_customers_Weight__c *1,
 &apos;Meet Expectations&apos;,No_of_High_value_customers_Weight__c *0.85,
&apos;Average&apos;,No_of_High_value_customers_Weight__c *0.6,
&apos;High Risk&apos;,No_of_High_value_customers_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No. of High value customers Rating (&gt; $ 5m)</inlineHelpText>
    <label>No. of High value customers Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>