force-app/main/default/objects/Due_Diligence__c/fields/OEM_model_Spare_replacement_Weight__c.field-meta.xml
<CustomField>
    <fullName>OEM_model_Spare_replacement_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.OEM_model_Spare_replacement_Weight__c</defaultValue>
    <label>OEM model/Spare replacement Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>