force-app/main/default/objects/Due_Diligence__c/fields/OEM_model_Spare_Score__c.field-meta.xml
<CustomField>
    <fullName>OEM_model_Spare_Score__c</fullName>
    <formula>CASE(TEXT(  OEM_model_Spare_replacement_Rating__c ),
&apos;Exceed Expectations&apos;,  OEM_model_Spare_replacement_Weight__c *1,
 &apos;Meet Expectations&apos;,OEM_model_Spare_replacement_Weight__c *0.85,
&apos;Average&apos;,OEM_model_Spare_replacement_Weight__c *0.6,
&apos;High Risk&apos;,OEM_model_Spare_replacement_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OEM support model / spare replacements Score</inlineHelpText>
    <label>OEM model/Spare Replacement Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>