force-app/main/default/objects/Due_Diligence__c/fields/OEM_Partnership_Certification_Score__c.field-meta.xml
<CustomField>
    <fullName>OEM_Partnership_Certification_Score__c</fullName>
    <formula>CASE(TEXT(  OEM_Partnership_Certification_Rating__c ),
 &apos;Exceed Expectations&apos;,  OEM_Partnership_Certification_Weight__c *1,
 &apos;Meet Expectations&apos;,OEM_Partnership_Certification_Weight__c *0.85,
&apos;Average&apos;,OEM_Partnership_Certification_Weight__c *0.6,
&apos;High Risk&apos;,OEM_Partnership_Certification_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Partnership / Certification Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>