force-app/main/default/objects/Due_Diligence__c/fields/OEM_Product_support_Score__c.field-meta.xml
<CustomField>
    <fullName>OEM_Product_support_Score__c</fullName>
    <formula>CASE(TEXT(  OEM_Product_support_Rating__c  ),
 &apos;Exceed Expectations&apos;,  OEM_Product_support_Weight__c *1,
 &apos;Meet Expectations&apos;,OEM_Product_support_Weight__c *0.85,
&apos;Average&apos;,OEM_Product_support_Weight__c *0.6,
&apos;High Risk&apos;,OEM_Product_support_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Product support Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>