force-app/main/default/objects/Due_Diligence__c/fields/OEM_Product_support_Weight__c.field-meta.xml
<CustomField>
    <fullName>OEM_Product_support_Weight__c</fullName>
    <defaultValue>4</defaultValue>
    <label>OEM Product support Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>