force-app/main/default/objects/Due_Diligence__c/fields/Overall10__c.field-meta.xml
<CustomField>
    <fullName>Overall10__c</fullName>
    <formula>Ticketing_tools_process_Score__c + E_bonding_capabilities_Score__c + X24x7_call_center_HelpDesk_support_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score%(Call Support/Management)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>