force-app/main/default/objects/Due_Diligence__c/fields/Overall1__c.field-meta.xml
<CustomField>
    <fullName>Overall1__c</fullName>
    <formula>OEM_Partnership_Certification_Score__c + Skilled_Employees_Certification_ScoreTC__c + Technical_delivery_Matrix_Score__c + Products_supported_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score%(Technical capabilities)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>