force-app/main/default/objects/Due_Diligence__c/fields/Overall2__c.field-meta.xml
<CustomField>
    <fullName>Overall2__c</fullName>
    <formula>Current_spare_in_stock_Management_Score__c + Warehouse_Management_Score__c + OEM_model_Spare_Score__c + Warranty_Out_of_Warranty_support_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score%(Spare Management)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>