force-app/main/default/objects/Due_Diligence__c/fields/Overall_delivery_capabilities_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_delivery_capabilities_Rating__c</fullName>
    <inlineHelpText>Overall delivery capabilities (coverage, SLA and technical)</inlineHelpText>
    <label>Overall delivery capabilities Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceed Expectations</fullName>
            </value>
            <value>
                <fullName>Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Not Ready for Partnership</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>