force-app/main/default/objects/Due_Diligence__c/fields/Overall_delivery_capabilities_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_delivery_capabilities_Score__c</fullName>
    <formula>CASE(TEXT(  Overall_delivery_capabilities_Rating__c ),
&apos;Exceed Expectations&apos;,  Overall_delivery_capabilities_Weight__c *1,
 &apos;Meet Expectations&apos;,Overall_delivery_capabilities_Weight__c *0.85,
&apos;Average&apos;,Overall_delivery_capabilities_Weight__c *0.6,
&apos;High Risk&apos;,Overall_delivery_capabilities_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Overall delivery capabilities (coverage, SLA and technical)</inlineHelpText>
    <label>Overall delivery capabilities Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>