force-app/main/default/objects/Due_Diligence__c/fields/Overall_delivery_capabilities_Weight__c.field-meta.xml
<CustomField>
    <fullName>Overall_delivery_capabilities_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Overall_delivery_capabilities_Weight__c</defaultValue>
    <inlineHelpText>Overall delivery capabilities (coverage, SLA and technical)</inlineHelpText>
    <label>Overall delivery capabilities Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>