force-app/main/default/objects/Due_Diligence__c/fields/Overall_Normalized_Partnership_RAG__c.field-meta.xml
<CustomField>
    <fullName>Overall_Normalized_Partnership_RAG__c</fullName>
    <formula>IF( (Overall_Normalized_Partnership_Score__c) &lt;=50, IMAGE(&quot;/resource/1616506498000/Red&quot;, &apos;Red&apos;,30,30) ,IF((Overall_Normalized_Partnership_Score__c) &lt;80,IMAGE(&quot;/resource/1616506522000/Amber&quot;, &apos;Amber&apos;,30,30),IMAGE(&quot;/resource/1616506472000/Green&quot;, &apos;Green&apos;,30,30)))</formula>
    <label>Overall Normalized Partnership RAG</label>
    <type>Text</type>
</CustomField>