force-app/main/default/objects/Due_Diligence__c/fields/Overall_Normalized_Partnership_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Normalized_Partnership_Score__c</fullName>
    <label>Overall Normalized Partnership Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>