force-app/main/default/objects/Due_Diligence__c/fields/Overall_Normalized_Partnership_Weight__c.field-meta.xml
<CustomField>
    <fullName>Overall_Normalized_Partnership_Weight__c</fullName>
    <formula>IF(In_considered1__c == true , Company_Overall_Weight__c , 0)+
IF(In_considered2__c == true ,  Financial_Credibility_Overall_Weight__c , 0)+  
IF(In_considered3__c == true ,  Service_Delivery_Overall_Weight__c , 0)+ 
IF(In_considered4__c == true ,  Coverage_Point_Presence_Overall_Weight__c , 0) +
IF(In_considered5__c == true ,  SLA_Overall_Weight__c , 0) +
IF(In_considered6__c == true ,   Technical_capabilities_Overall_Weight__c , 0) +
IF(In_considered7__c == true ,   Call_Support_Management_Overall_Weight__c , 0) +
IF(In_considered8__c == true ,   Spare_Management_Overall_Weight__c , 0) +
IF(In_considered9__c == true ,   Responses_Quality_of_Doc_Overall_Weight__c , 0) +
IF(In_considered10__c == true ,    Customer_Base_Feedback_Overall_Weight__c , 0)</formula>
    <label>Overall Normalized Partnership Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>