force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Company_Overview__c</fullName>
    <description>Being updated from Process builder</description>
    <label>Overall Score%:Company Overview</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>