force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Coverage_Point_Presence__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Coverage_Point_Presence__c</fullName>
    <label>Overall Score%: Coverage Point Presence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>