force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Customer_Base_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Customer_Base_Feedback__c</fullName>
    <label>Overall Score: Customer Base / Feedback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>