force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Responses_Quality_of_Doc__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Responses_Quality_of_Doc__c</fullName>
    <label>Overall Score: Responses/Quality of Doc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>