force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Service_Delievery_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Service_Delievery_Hidden__c</fullName>
    <label>Overall Score(Service Delievery Hidden)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>