force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Service_Delivery__c</fullName>
    <label>Overall Score%: Service Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>