force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Spare_Management__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Spare_Management__c</fullName>
    <label>Overall Score: Spare Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>