force-app/main/default/objects/Due_Diligence__c/fields/Overall_Score_Technical_capabilities__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Technical_capabilities__c</fullName>
    <label>Overall Score: Technical capabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>