force-app/main/default/objects/Due_Diligence__c/fields/Partner_H_O__c.field-meta.xml
<CustomField>
    <fullName>Partner_H_O__c</fullName>
    <label>Partner H.O.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>