force-app/main/default/objects/Due_Diligence__c/fields/Point_of_presence_Score__c.field-meta.xml
<CustomField>
    <fullName>Point_of_presence_Score__c</fullName>
    <formula>CASE(TEXT(  Point_of_presence_Rating__c ),
&apos;Exceed Expectations&apos;,  Point_of_presence_Weight__c *1,
 &apos;Meet Expectations&apos;,Point_of_presence_Weight__c*0.85,
&apos;Average&apos;,Point_of_presence_Weight__c*0.6,
&apos;High Risk&apos;,Point_of_presence_Weight__c*0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Point of presence Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>