force-app/main/default/objects/Due_Diligence__c/fields/Point_of_presence_Weight__c.field-meta.xml
<CustomField>
    <fullName>Point_of_presence_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Point_of_presence_Weight__c</defaultValue>
    <label>Point of presence Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>