force-app/main/default/objects/Due_Diligence__c/fields/Proactiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>Proactiveness_Score__c</fullName>
    <formula>CASE(TEXT(   Proactiveness_Rating__c ),
&apos;Exceed Expectations&apos;,  Proactiveness_Weight__c *1,
 &apos;Meet Expectations&apos;,Proactiveness_Weight__c  *0.85,
&apos;Average&apos;,Proactiveness_Weight__c *0.6,
&apos;High Risk&apos;,Proactiveness_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proactiveness Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>