force-app/main/default/objects/Due_Diligence__c/fields/Proactiveness_Weight__c.field-meta.xml
<CustomField>
    <fullName>Proactiveness_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Proactiveness_Weight__c</defaultValue>
    <label>Proactiveness Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>