force-app/main/default/objects/Due_Diligence__c/fields/Products_supported_Score__c.field-meta.xml
<CustomField>
    <fullName>Products_supported_Score__c</fullName>
    <formula>CASE(TEXT(   Products_supported_Rating__c  ),
&apos;Exceed Expectations&apos;,  Products_supported_Weight__c *1,
 &apos;Meet Expectations&apos;,Products_supported_Weight__c *0.85,
&apos;Average&apos;,Products_supported_Weight__c  *0.6,
&apos;High Risk&apos;,Products_supported_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products supported Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>