force-app/main/default/objects/Due_Diligence__c/fields/Products_supported_Weight__c.field-meta.xml
<CustomField>
    <fullName>Products_supported_Weight__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Products supported Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>